src/styles/global.css
@font-face {
  font-family: "Maple Mono";
}

html {
  min-height: 100vh;
  min-height: -webkit-fill-available;
  min-height: -moz-available;
  min-height: stretch;
  min-height: fill-available;
  min-height: 100dvh;
}

body {
  --horizontal-margin: 20%;

  width: 100%;
  min-height: 100vh;
  min-height: -webkit-fill-available;
  min-height: -moz-available;
  min-height: stretch;
  min-height: fill-available;
  min-height: 100dvh;

  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

* {
  box-sizing: border-box;
}

code {
  font-size: 2rem;
}

h1 {
  font-size: 2.5rem;
  color: #cdd6f4;
}

